<resources>
    <string name="app_name">Cattle NOTES</string>
    <string name="please_wait_text">Please wait&#8230;</string>
    <string name="saving_dialog_message">Saving&#8230;</string>
    <string name="stay">Stay</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="just_save">Just save</string>
    <string name="go_back">Go Back</string>
    <string name="retry">Retry</string>
    <string name="reset">Reset</string>
    <string name="edit">Edit</string>
    <string name="more">More</string>
    <string name="remove_text">Remove %1$s?</string>
    <string name="required">Required</string>
    <string name="zero">0</string>
    <string name="not_now">Not now</string>
    <string name="back_pressed_message">You want to go back?</string>
    <string name="changes_not_saved_message">If you go back changes will not be saved.</string>
    <string name="undo">Undo</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="sms_permission_required">SMS permission required</string>
    <string name="go_to_settings_for_permission_title">Go to app settings to allow permission</string>
    <string name="go_to_settings_for_sms_permission_message">Please go to Cattle NOTES app Settings -> Permissions -> SMS -> Click Allow</string>
    <string name="rupee">\u20B9</string>
    <string name="cow">Cow</string>
    <string name="buffalo">Buffalo</string>
    <string name="bull">Bull</string>
    <string name="heifer">Heifer</string>
    <string name="milking">Milking</string>
    <string name="dry">Dry</string>
    <string name="amritmahal">Amritmahal</string>
    <string name="alambadi">Alambadi</string>
    <string name="ayrshire">Ayrshire</string>
    <string name="bargur">Bargur</string>
    <string name="brown_swiss">Brown Swiss</string>
    <string name="deoni">Deoni</string>
    <string name="gir">Gir</string>
    <string name="guernsey">Guernsey</string>
    <string name="hariana">Hariana</string>
    <string name="hf">HF</string>
    <string name="hallikar">Hallikar</string>
    <string name="holstein_friesian">Holstein Friesian</string>
    <string name="holstein_friesian_cross">Holstein Friesian cross</string>
    <string name="jersey">Jersey</string>
    <string name="jersey_cross">Jersey cross</string>
    <string name="kankrej">Kankrej</string>
    <string name="kangayam">Kangayam</string>
    <string name="khillari">Khillari</string>
    <string name="krishna_valley">Krishna Valley</string>
    <string name="ongole">Ongole</string>
    <string name="pulikulam">Pulikulam</string>
    <string name="red_dane">Red Dane</string>
    <string name="red_sindhi">Red Sindhi</string>
    <string name="sahiwal">Sahiwal</string>
    <string name="tharparkar">Tharparkar</string>
    <string name="umblachery">Umblachery</string>
    <string name="bhadawari">Bhadawari</string>
    <string name="jaffrabadi">Jaffrabadi</string>
    <string name="mehsana">mehsana</string>
    <string name="murrah">Murrah</string>
    <string name="nagpuri">Nagpuri</string>
    <string name="nili_ravi">Nili Ravi</string>
    <string name="surti">Surti</string>
    <string name="toda">Toda</string>
    <string name="tn_fabButton">fab_button</string>
    <string name="sharedElementCattleItemLayout">transition_cattle_details</string>
    <string name="sharedElementImageView">ImageView</string>
    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_not_available">Internet connection not available, Please connect and try again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="network_login_again">Please log in again</string>
    <string name="try_login_again_text">Try logging in again</string>
    <string name="logo">Application logo</string>
    <string name="login_button_text">Login</string>
    <string name="login_title">Login</string>
    <string name="logging_in">Logging in</string>
    <string name="login_message">Please login to continue</string>
    <string name="login_complete">Login complete</string>
    <string name="cattle">Cattle</string>
    <string name="timeline">Timeline</string>
    <string name="cashflow">Cashflow</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about">About</string>
    <string name="open_source_licences">Open-source licences</string>
    <string name="notes">Notes</string>
    <string name="logout_error">Can\'t logout. Try again</string>
    <string name="logging_out">Logging Out&#8230;</string>
    <string name="logout_message">Logout?</string>
    <string name="cattle_list_empty">Click &#43; icon to add new cattle</string>
    <string name="parent_list_empty">Your parent list is empty</string>
    <string name="select_parent">Select parent</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cattle_detail">Cattle detail</string>
    <string name="tag_number">Tag Number</string>
    <string name="name">Name</string>
    <string name="breed">Breed</string>
    <string name="type">Type</string>
    <string name="group">Group</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="parent">Parent</string>
    <string name="parent_not_available">Parent not available</string>
    <string name="lactation">Lactation</string>
    <string name="active_breeding">Active breeding</string>
    <string name="calving_date">Calving date</string>
    <string name="purchase_amount">Purchase amount (\u20B9)</string>
    <string name="purchase_date">Purchase date</string>
    <string name="artificial_insemination_date">Artificial insemination date</string>
    <string name="artificial_insemination">Artificial insemination</string>
    <string name="provide_ai_date">Provide artificial insemination date</string>
    <string name="did_by">Did by</string>
    <string name="bull_name">Bull name</string>
    <string name="straw_code">Straw code</string>
    <string name="repeat_heat_date">Repeat heat date</string>
    <string name="repeat_heat">Repeat heat</string>
    <string name="pregnancy_check_date">Pregnancy check date</string>
    <string name="pregnancy_check">Pregnancy check</string>
    <string name="dry_off_date">Dry off date</string>
    <string name="dry_off">Dry off</string>
    <string name="calving">Calving</string>
    <string name="delete">Delete</string>
    <string name="home_born">Home born</string>
    <string name="expected">Expected</string>
    <string name="done_on">Done on</string>
    <string name="breeding_history">Breeding History</string>
    <string name="add_new_breeding">Add breeding</string>
    <string name="edit_breeding">Edit breeding</string>
    <string name="show_all_breeding">Show all breeding</string>
    <string name="parent_helper_text">Press and hold to remove</string>
    <string name="show_active_breeding">Show active breeding</string>
    <string name="parent_detail">Parent detail</string>
    <string name="error_cattle_not_found">Cattle not found</string>
    <string name="add_cattle">Add new cattle</string>
    <string name="cattle_saved">Cattle saved</string>
    <string name="edit_cattle_details">Edit cattle details</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Delete</string>
    <string name="delete_cattle_title">Delete cattle?</string>
    <string name="delete_cattle_message">Deleting this cattle will also delete breeding data associated with this cattle. This operation can not be undone.</string>
    <string name="mark_as_active">Mark as active</string>
    <string name="repeat_heat_status">Repeat heat status</string>
    <string name="pregnancy_check_status">Pregnancy check status</string>
    <string name="dry_off_status">Dry off status</string>
    <string name="calving_status">Calving status</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="none">None</string>
    <string name="status">Status</string>
    <string name="empty_breeding">No breeding available</string>
    <string name="delete_breeding">Delete breeding?</string>
    <string name="not_set">Not set</string>
    <string name="breeding_cycle_complete">Breeding cycle completed</string>
    <string name="save_and_add_new_cattle">Save &amp; Add new cattle</string>
    <string name="breeding_cycle_complete_message">Once breeding cycle is complete you can not modify this breeding later.</string>
    <string name="timeline_empty">All breeding is completed.\nStart adding new breeding, you will see your next breeding event here.</string>
    <string name="automatic_milking_collection">Automatic milking collection</string>
    <string name="permissions_message_at_milking">SMS permission required to enable Automatic Milking Collection feature.\nClick here to grant permission.</string>
    <string name="sms_permission_explanation_for_amc_feature">If you get SMS of milk you sell, we can handle it for you with the Automatic Milking Collection feature. This feature needs to read your SMS only from the sender you specify from which you get SMS and adds in your milking data automatically when a message arrives. If you do not want to allow for this permission also you can add milking information manually.\nCurrently this feature supports SMS by AMUL only.</string>
    <string name="menu_item_sync_with_sms">Sync with SMS messages</string>
    <string name="menu_item_change_sms_source">Change milk SMS sender</string>
    <string name="menu_item_add_milk">Add milk</string>
    <string name="sms_source_title">Choose SMS sender</string>
    <string name="no_milk_found">No milk found</string>
    <string name="milk_found">%1$d new milk found</string>
    <string name="milking_empty">No milk added yet. Start adding by clicking + icon at bottom or import from SMS by clicking at top right corner icon.</string>
    <string name="milk_of">Milk of</string>
    <string name="quantity">Quantity</string>
    <string name="liter">Liter</string>
    <string name="fat">Fat</string>
    <string name="amount">Amount</string>
    <string name="total_quantity">Total quantity</string>
    <string name="total_amount">Total amount</string>
    <string name="error_add_milk">Can not add milk data</string>
    <string name="add_milk">Add milk</string>
    <string name="bgamamcs">BGAMAMCS</string>
    <string name="milk_source_manual">Source Manual</string>
    <string name="milk_source_sms">Source SMS (%1$s)</string>
    <string name="farm_info">Farm info</string>
    <string name="farm_name">Farm name</string>
    <string name="dairy_code">Dairy code</string>
    <string name="customer_id">Customer id</string>
    <string name="customer_id_helper_text">Your customer id at dairy</string>
    <string name="farm_address">Farm address</string>
    <string name="personal_info">Personal info</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
</resources>