<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/topLevelDestinations"
        android:checkableBehavior="single">
        <item
            android:id="@id/cattleListScreen"
            android:checkable="true"
            android:icon="@drawable/ic_cattle_black"
            android:title="@string/cattle"
            android:checked="true" />

        <item
            android:id="@id/timelineScreen"
            android:checkable="true"
            android:icon="@drawable/ic_timeline_black"
            android:title="@string/timeline" />

        <item
            android:id="@id/milkingScreen"
            android:checkable="true"
            android:icon="@drawable/ic_milking_black"
            android:title="@string/milking" />

        <item
            android:id="@id/cashflowScreen"
            android:checkable="true"
            android:icon="@drawable/ic_cashflow_black"
            android:title="@string/cashflow"/>

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/itemSettings"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/settings" />

            <item
                android:id="@+id/itemAboutApp"
                android:icon="@drawable/ic_info_black"
                android:title="@string/about_this_app" />
        </group>
    </group>
</menu>