<!--
  ~ Copyright (c) 2020 Cattle Notes. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_first_group"
        android:checkableBehavior="single">

        <item
            android:id="@id/cattleListScreen"
            android:checkable="true"
            android:icon="@drawable/ic_nav_cattle"
            android:title="@string/cattle"
            android:checked="true"/>

        <item
            android:id="@id/timelineScreen"
            android:checkable="true"
            android:icon="@drawable/ic_nav_timeline"
            android:title="@string/timeline" />

        <item
            android:id="@id/milkingScreen"
            android:checkable="true"
            android:icon="@drawable/ic_nav_milking"
            android:title="@string/milking" />

        <item
            android:id="@id/cashflowScreen"
            android:checkable="true"
            android:icon="@drawable/ic_nav_cashflow"
            android:title="@string/cashflow"/>
    </group>

    <group android:id="@+id/nav_second_group"
        android:checkableBehavior="single">

        <item
            android:id="@id/settingsScreen"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/settings" />

        <item
            android:id="@id/profileScreen"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/profile" />

    </group>
</menu>