<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/cattle"
        app:showAsAction="always"
        android:icon="@drawable/ic_cattle_unselected"
        android:titleCondensed="@string/cattle"
        android:checkable="true"
        android:id="@+id/itemCattle"
        tools:ignore="AlwaysShowAction" />

    <item
        android:title="@string/timeline"
        app:showAsAction="always"
        android:icon="@drawable/ic_timeline_unselected"
        android:titleCondensed="@string/timeline"
        android:id="@+id/itemTimeline" />

    <item
        android:title="@string/milking"
        app:showAsAction="always"
        android:icon="@drawable/ic_milking_unselected"
        android:titleCondensed="@string/milking"
        android:id="@+id/itemMilking" />

    <item
        android:title="@string/cashflow"
        app:showAsAction="always"
        android:icon="@drawable/ic_cashflow_unselected"
        android:titleCondensed="@string/cashflow"
        android:id="@+id/itemCashflow" />

</menu>