<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@+id/cattleScreen">

    <fragment
        android:id="@+id/cattleScreen"
        android:name="com.pr656d.cattlenotes.ui.cattle.CattleFragment"
        android:label="@string/cattle"
        tools:layout="@layout/fragment_cattle">

        <action
            android:id="@+id/navigate_to_cattle_detail"
            app:destination="@id/cattle_details_activity" />
    </fragment>

    <activity
        android:id="@+id/cattle_details_activity"
        android:name="com.pr656d.cattlenotes.ui.cattle.details.CattleDetailsActivity"
        android:label="Cattle Details"
        tools:layout="@layout/activity_cattle_details">

        <argument
            android:name="cattle_tag_number"
            app:argType="string"/>
    </activity>

    <fragment
        android:id="@+id/timelineScreen"
        android:name="com.pr656d.cattlenotes.ui.timeline.TimelineFragment"
        android:label="@string/timeline"
        tools:layout="@layout/fragment_timeline" />
    <fragment
        android:id="@+id/milkingScreen"
        android:name="com.pr656d.cattlenotes.ui.milking.MilkingFragment"
        android:label="@string/milking"
        tools:layout="@layout/fragment_milking" />

    <fragment
        android:id="@+id/cashflowScreen"
        android:name="com.pr656d.cattlenotes.ui.cashflow.CashflowFragment"
        android:label="@string/cashflow"
        tools:layout="@layout/fragment_cashflow" />

</navigation>