<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_normal">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchMarkAsActive"
        style="@style/Widget.MaterialComponents.CompoundButton.Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/outline"
        android:paddingStart="@dimen/box_padding_StartEnd"
        android:paddingTop="@dimen/box_padding_TopBottom"
        android:paddingEnd="@dimen/box_padding_StartEnd"
        android:paddingBottom="@dimen/box_padding_TopBottom"
        android:text="@string/home_born"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutAiDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/artificial_insemination"
        app:layout_constraintTop_toBottomOf="@+id/switchMarkAsActive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAiDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:focusable="false"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/AppTheme.Subtitle2"
        android:id="@+id/tvAiMoreDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_micro"
        android:padding="@dimen/padding_small"
        android:text="@string/more"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/layoutAiDate"
        app:layout_constraintEnd_toEndOf="@id/layoutAiDate"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutRepeatHeatDateExpected"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/repeat_heat"
        app:helperText="@string/expected"
        app:layout_constraintTop_toBottomOf="@+id/tvAiMoreDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextRepeatHeatDateExpected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:focusable="false"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
