<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="@dimen/clip_padding_bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_normal">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchActiveBreedingStatus"
            style="@style/AppTheme.MaterialSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_active" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutAiDate"
            style="@style/AppTheme.AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/artificial_insemination">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAiDate"
                style="@style/AppTheme.AppTextInputDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutRepeatHeatDateExpected"
            style="@style/AppTheme.AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/repeat_heat"
            app:helperText="@string/expected">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRepeatHeatDateExpected"
                style="@style/AppTheme.AppTextInputDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxRepeatHeatStatus"
            style="@style/AppTheme.MaterialCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/repeat_heat_status"
            android:visibility="visible"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutRepeatHeatDateActual"
            style="@style/AppTheme.AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/repeat_heat"
            android:visibility="visible"
            app:helperText="@string/done_on"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRepeatHeatDateActual"
                style="@style/AppTheme.AppTextInputDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPregnancyCheckDateExpected"
            style="@style/AppTheme.AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/pregnancy_check"
            app:helperText="@string/expected">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPregnancyCheckDateExpected"
                style="@style/AppTheme.AppTextInputDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxPregnancyCheckStatus"
            style="@style/AppTheme.MaterialCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/pregnancy_check_status"
            android:visibility="visible"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPregnancyCheckDateActual"
            style="@style/AppTheme.AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/pregnancy_check"
            android:visibility="visible"
            app:helperText="@string/done_on"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPregnancyCheckDateActual"
                style="@style/AppTheme.AppTextInputDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDryOffDateExpected"
            style="@style/AppTheme.AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/dry_off"
            app:helperText="@string/expected">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDryOffDateExpected"
                style="@style/AppTheme.AppTextInputDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxDryOffStatus"
            style="@style/AppTheme.MaterialCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/dry_off_status"
            android:visibility="visible"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDryOffDateActual"
            style="@style/AppTheme.AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/dry_off"
            android:visibility="visible"
            app:helperText="@string/done_on"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDryOffDateActual"
                style="@style/AppTheme.AppTextInputDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutCalvingDateExpected"
            style="@style/AppTheme.AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/calving_date"
            app:helperText="@string/expected">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCalvingDateExpected"
                style="@style/AppTheme.AppTextInputDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxCalvingStatus"
            style="@style/AppTheme.MaterialCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/calving_status"
            android:visibility="visible"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutCalvingDateActual"
            style="@style/AppTheme.AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/calving_date"
            android:visibility="visible"
            app:helperText="@string/done_on"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCalvingDateActual"
                style="@style/AppTheme.AppTextInputDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>
